solutions to hw3 problem1

--- a/p8105_hw3_yh3094.md
+++ b/p8105_hw3_yh3094.md
@@ -65,7 +65,7 @@ brfss_data %>%
   labs(title = "The spaghetti plot")
 ```
 
-<img src="p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png" width="90%" />
+![](p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png)
 
 The number of observations didn't change a lot over the years in most states, although some states, like FL, MA and WA, have the number of observations changing from thousands to ten thousands.
 
@@ -83,7 +83,7 @@ brfss_data %>%
   summarise(
     mean_excellent = round(mean(data_value, na.rm = TRUE), digits = 1), 
     sd_excellent = round(sd(data_value, na.rm = TRUE), digits = 1)) %>%
-  knitr::kable(caption = "The proportion of “Excellent” responses across locations in NY State in 2002, 2006, and 2010")
+  knitr::kable(caption = "The proportion of “Excellent” responses") ##???
 ```
 
 |  year|  mean\_excellent|  sd\_excellent|
@@ -134,7 +134,7 @@ brfss_data %>%
   labs(title = "The five-panel plot")
 ```
 
-<img src="p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png" width="90%" />
+![](p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png)
 
 Almost in all states, the average proportion of “Very good” responses is the largest compared with other response categories, and the average proportion of “Poor” responses is the smallest. The average proportion of each response category changed over time with no regular pattern.
 
