--- a/p8105_hw3_yh3094.Rmd
+++ b/p8105_hw3_yh3094.Rmd
@@ -9,12 +9,6 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 
-knitr::opts_chunk$set(
-  fig.width = 6,
-  fig.asp = .6,
-  out.width = "90%"
-)
-
 theme_set(theme_bw() + theme(legend.position = "bottom"))
 ```
 
@@ -77,7 +71,7 @@ brfss_data %>%
   summarise(
     mean_excellent = round(mean(data_value, na.rm = TRUE), digits = 1), 
     sd_excellent = round(sd(data_value, na.rm = TRUE), digits = 1)) %>%
-  knitr::kable(caption = "The proportion of “Excellent” responses across locations in NY State in 2002, 2006, and 2010")
+  knitr::kable(caption = "The proportion of “Excellent” responses") ##???
 ```
 
 The mean of the proportion of “Excellent” responses across locations in NY State decreased in 2006 and then increased a little bit in 2010. The standard deviation of the proportion of “Excellent” responses across locations in NY State showed a decreasing trend from 2002 to 2010.
