part of solutions to hw3 problem2

--- a/p8105_hw3_yh3094.md
+++ b/p8105_hw3_yh3094.md
@@ -65,7 +65,7 @@ brfss_data %>%
   labs(title = "The spaghetti plot")
 ```
 
-![](p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png)
+<img src="p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png" width="90%" />
 
 The number of observations didn't change a lot over the years in most states, although some states, like FL, MA and WA, have the number of observations changing from thousands to ten thousands.
 
@@ -83,7 +83,7 @@ brfss_data %>%
   summarise(
     mean_excellent = round(mean(data_value, na.rm = TRUE), digits = 1), 
     sd_excellent = round(sd(data_value, na.rm = TRUE), digits = 1)) %>%
-  knitr::kable(caption = "The proportion of “Excellent” responses") ##???
+  knitr::kable()
 ```
 
 |  year|  mean\_excellent|  sd\_excellent|
@@ -134,9 +134,91 @@ brfss_data %>%
   labs(title = "The five-panel plot")
 ```
 
-![](p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png)
+<img src="p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png" width="90%" />
 
 Almost in all states, the average proportion of “Very good” responses is the largest compared with other response categories, and the average proportion of “Poor” responses is the smallest. The average proportion of each response category changed over time with no regular pattern.
 
 Problem 2
 =========
+
+Import the Instacart data
+-------------------------
+
+``` r
+data("instacart")
+instacart = janitor::clean_names(instacart) ## clean variable names
+```
+
+Calculate the number of aisles and find out the most frequent
+-------------------------------------------------------------
+
+``` r
+n_distinct(instacart$aisle) ## number of aisles
+```
+
+    ## [1] 134
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  mutate(aisle_ranking = min_rank(desc(n))) %>% 
+  filter(aisle_ranking == 1)
+```
+
+    ## # A tibble: 1 x 3
+    ##   aisle                 n aisle_ranking
+    ##   <chr>             <int>         <int>
+    ## 1 fresh vegetables 150609             1
+
+There are 134 aisles. Fresh vegetables is the aisle which the most items ordered from.
+
+Make a plot
+-----------
+
+The code chunk below makes a plot that shows the number of items ordered in each aisle. Order aisles sensibly, and organize your plot so others can read it.
+
+``` r
+instacart %>% 
+  group_by(department, aisle) %>% 
+  summarise(n_item = sum(order_number)) %>% 
+  ggplot(aes(x = aisle, y = n_item, color = aisle)) +
+  geom_point() +
+  facet_grid(~department)
+```
+
+<img src="p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-1.png" width="90%" />
+
+Make a table
+------------
+
+The code chunk below makes a table showing the most popular item aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
+
+Make a table
+------------
+
+The code chunk below makes a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week.
+
+``` r
+instacart %>% 
+  filter(product_name == "Pink Lady Apples" | product_name == "Coffee Ice Cream") %>%
+  group_by(product_name, order_dow) %>% 
+  summarize(mean_time = round(mean(order_hour_of_day, na.rm = TRUE), digits = 1)) %>% 
+  spread(key = order_dow, value = mean_time) %>% 
+  knitr::kable()
+```
+
+| product\_name    |     0|     1|     2|     3|     4|     5|     6|
+|:-----------------|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
+| Coffee Ice Cream |  13.8|  14.3|  15.4|  15.3|  15.2|  12.3|  13.8|
+| Pink Lady Apples |  13.4|  11.4|  11.7|  14.2|  11.6|  12.8|  11.9|
+
+Problem 3
+=========
+
+Import the NY NOAA data
+-----------------------
+
+``` r
+data("ny_noaa")
+ny_noaa = janitor::clean_names(ny_noaa) ## clean variable names
+```
