--- a/p8105_hw3_yh3094.Rmd
+++ b/p8105_hw3_yh3094.Rmd
@@ -9,6 +9,12 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
 theme_set(theme_bw() + theme(legend.position = "bottom"))
 ```
 
@@ -71,7 +77,7 @@ brfss_data %>%
   summarise(
     mean_excellent = round(mean(data_value, na.rm = TRUE), digits = 1), 
     sd_excellent = round(sd(data_value, na.rm = TRUE), digits = 1)) %>%
-  knitr::kable(caption = "The proportion of “Excellent” responses") ##???
+  knitr::kable()
 ```
 
 The mean of the proportion of “Excellent” responses across locations in NY State decreased in 2006 and then increased a little bit in 2010. The standard deviation of the proportion of “Excellent” responses across locations in NY State showed a decreasing trend from 2002 to 2010.
@@ -102,9 +108,66 @@ Almost in all states, the average proportion of “Very good” responses is the
 
 # Problem 2
 
-## 
+## Import the Instacart data
 
-```{r}
+```{r instacart_data_import}
+data("instacart")
+instacart = janitor::clean_names(instacart) ## clean variable names
+```
 
+## Calculate the number of aisles and find out the most frequent
+
+```{r n_aisle}
+n_distinct(instacart$aisle) ## number of aisles
+instacart %>% 
+  count(aisle) %>% 
+  mutate(aisle_ranking = min_rank(desc(n))) %>% 
+  filter(aisle_ranking == 1)
+```
+
+There are 134 aisles. Fresh vegetables is the aisle which the most items ordered from.
+
+## Make a plot
+
+The code chunk below makes a plot that shows the number of items ordered in each aisle. Order aisles sensibly, and organize your plot so others can read it.
+
+```{r aisle_plot}
+instacart %>% 
+  group_by(department, aisle) %>% 
+  summarise(n_item = sum(order_number)) %>% 
+  ggplot(aes(x = aisle, y = n_item, color = aisle)) +
+  geom_point() +
+  facet_grid(~department)
+```
+
+## Make a table 
+
+The code chunk below makes a table showing the most popular item aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
+
+```{r popular_aisle_table}
+  
+```
+
+## Make a table 
+
+The code chunk below makes a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week.
+
+```{r mean_time}
+instacart %>% 
+  filter(product_name == "Pink Lady Apples" | product_name == "Coffee Ice Cream") %>%
+  group_by(product_name, order_dow) %>% 
+  summarize(mean_time = round(mean(order_hour_of_day, na.rm = TRUE), digits = 1)) %>% 
+  spread(key = order_dow, value = mean_time) %>% 
+  knitr::kable()
+```
+
+
+# Problem 3
+
+## Import the NY NOAA data
+
+```{r ny_noaa_data_import}
+data("ny_noaa")
+ny_noaa = janitor::clean_names(ny_noaa) ## clean variable names
 ```
 
