--- a/p8105_hw3_yh3094.md
+++ b/p8105_hw3_yh3094.md
@@ -28,7 +28,8 @@ Clean the BRFSS data
 brfss_data = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   filter(topic == "Overall Health") %>% 
-  mutate(response = as.factor(response))
+  filter(response %in% c("Excellent", "Very good", "Good", "Fair", "Poor")) %>% 
+  mutate(response = factor(response, levels = c("Excellent", "Very good", "Good", "Fair", "Poor")))
 ```
 
 Pick out the states observed at 7 locations in 2002
@@ -65,7 +66,7 @@ brfss_data %>%
   labs(title = "The spaghetti plot")
 ```
 
-<img src="p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png" width="90%" />
+![](p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png)
 
 The number of observations didn't change a lot over the years in most states, although some states, like FL, MA and WA, have the number of observations changing from thousands to ten thousands.
 
@@ -76,14 +77,14 @@ The code chunk below makes a table showing, for the years 2002, 2006, and 2010, 
 
 ``` r
 brfss_data %>% 
-  filter(locationabbr == "NY") %>% 
-  filter(year == 2002 | year == 2006 | year == 2010) %>% 
-  filter(response == "Excellent") %>% 
+  filter(
+    locationabbr == "NY", year %in% c("2002", "2006", "2010"), response == "Excellent"
+  ) %>%
   group_by(year) %>% 
   summarise(
-    mean_excellent = round(mean(data_value, na.rm = TRUE), digits = 1), 
-    sd_excellent = round(sd(data_value, na.rm = TRUE), digits = 1)) %>%
-  knitr::kable()
+    mean_excellent = mean(data_value, na.rm = TRUE), 
+    sd_excellent = sd(data_value, na.rm = TRUE)) %>%
+  knitr::kable(digits = 1)
 ```
 
 |  year|  mean\_excellent|  sd\_excellent|
@@ -108,15 +109,15 @@ brfss_data %>%
     ##     year locationabbr response  mean_response_proportion
     ##    <int> <chr>        <fct>                        <dbl>
     ##  1  2002 AK           Excellent                     27.9
-    ##  2  2002 AK           Fair                           8.6
+    ##  2  2002 AK           Very good                     33.7
     ##  3  2002 AK           Good                          23.8
-    ##  4  2002 AK           Poor                           5.9
-    ##  5  2002 AK           Very good                     33.7
+    ##  4  2002 AK           Fair                           8.6
+    ##  5  2002 AK           Poor                           5.9
     ##  6  2002 AL           Excellent                     18.5
-    ##  7  2002 AL           Fair                          12.1
+    ##  7  2002 AL           Very good                     30.9
     ##  8  2002 AL           Good                          32.7
-    ##  9  2002 AL           Poor                           5.9
-    ## 10  2002 AL           Very good                     30.9
+    ##  9  2002 AL           Fair                          12.1
+    ## 10  2002 AL           Poor                           5.9
     ## # ... with 2,205 more rows
 
 Make a five-panel plot
@@ -127,16 +128,17 @@ The code chunk below makes a five-panel plot that shows, for each response categ
 ``` r
 brfss_data %>% 
   group_by(year, locationabbr, response) %>% 
-  summarize(mean_response_proportion = round(mean(data_value, na.rm = TRUE), digits = 1)) %>% 
-  ggplot(aes(x = year, y = mean_response_proportion, color = locationabbr)) +
+  summarize(mean_response_proportion = mean(data_value, na.rm = TRUE)) %>% 
+  ggplot(aes(x = factor(year), y = mean_response_proportion)) +
   facet_grid(~response) +
-  geom_line() +
+  geom_violin(aes(fill = factor(year))) +
+  stat_summary(fun.y = median, geom = "point", size = 2) +
   labs(title = "The five-panel plot")
 ```
 
-<img src="p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png" width="90%" />
+![](p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png)
 
-Almost in all states, the average proportion of “Very good” responses is the largest compared with other response categories, and the average proportion of “Poor” responses is the smallest. The average proportion of each response category changed over time with no regular pattern.
+The state-level average proportion of “Very good” responses remained highest compared with that of other response categories over time. And the state-level average proportion of “Poor” responses remained lowest over time. For all response categories, these state-level averages didn't change much over time.
 
 Problem 2
 =========
@@ -147,7 +149,59 @@ Import the Instacart data
 ``` r
 data("instacart")
 instacart = janitor::clean_names(instacart) ## clean variable names
+skimr::skim(instacart)
 ```
+
+    ## Skim summary statistics
+    ##  n obs: 1384617 
+    ##  n variables: 15 
+    ## 
+    ## -- Variable type:character --------------------------------------------------------------------
+    ##      variable missing complete       n min max empty n_unique
+    ##         aisle       0  1384617 1384617   3  29     0      134
+    ##    department       0  1384617 1384617   4  15     0       21
+    ##      eval_set       0  1384617 1384617   5   5     0        1
+    ##  product_name       0  1384617 1384617   3 159     0    39123
+    ## 
+    ## -- Variable type:integer ----------------------------------------------------------------------
+    ##                variable missing complete       n       mean        sd p0
+    ##       add_to_cart_order       0  1384617 1384617       8.76      7.42  1
+    ##                aisle_id       0  1384617 1384617      71.3      38.1   1
+    ##  days_since_prior_order       0  1384617 1384617      17.07     10.43  0
+    ##           department_id       0  1384617 1384617       9.84      6.29  1
+    ##               order_dow       0  1384617 1384617       2.7       2.17  0
+    ##       order_hour_of_day       0  1384617 1384617      13.58      4.24  0
+    ##                order_id       0  1384617 1384617 1706297.62 989732.65  1
+    ##            order_number       0  1384617 1384617      17.09     16.61  4
+    ##              product_id       0  1384617 1384617   25556.24  14121.27  1
+    ##               reordered       0  1384617 1384617       0.6       0.49  0
+    ##                 user_id       0  1384617 1384617   1e+05     59487.15  1
+    ##     p25     p50     p75    p100     hist
+    ##       3       7      12      80 <U+2587><U+2583><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##      31      83     107     134 <U+2583><U+2587><U+2583><U+2583><U+2587><U+2585><U+2585><U+2586>
+    ##       7      15      30      30 <U+2582><U+2585><U+2583><U+2583><U+2581><U+2582><U+2581><U+2587>
+    ##       4       8      16      21 <U+2583><U+2587><U+2582><U+2581><U+2582><U+2586><U+2581><U+2583>
+    ##       1       3       5       6 <U+2587><U+2585><U+2583><U+2583><U+2581><U+2583><U+2585><U+2585>
+    ##      10      14      17      23 <U+2581><U+2581><U+2583><U+2587><U+2587><U+2587><U+2585><U+2582>
+    ##  843370 1701880 2568023 3421070 <U+2587><U+2587><U+2587><U+2587><U+2587><U+2587><U+2587><U+2587>
+    ##       6      11      21     100 <U+2587><U+2582><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##   13380   25298   37940   49688 <U+2586><U+2586><U+2587><U+2587><U+2587><U+2586><U+2587><U+2587>
+    ##       0       1       1       1 <U+2586><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2587>
+    ##   51732   1e+05  154959  206209 <U+2587><U+2587><U+2587><U+2587><U+2587><U+2587><U+2587><U+2587>
+
+write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
+
+The Instacart data has 1384617 observations and 15 variables. Variables for `aisle`, `department`, `eval_set` and `product_name` are class `character` and other variables are class `integer`. The dataset contains products of 39,123 different names bought from 134 different aisles within 21 departments. 0.6 of all items ordered have been ordered by the user in the past. Among those items which have been ordered before, Banana is the most popular. Most orders were placed at 14 ± 4.2 hours of the day.
+
+The distribution of orders placed at which day of the week are shown below.
+
+``` r
+instacart %>% 
+  count(order_dow) %>% 
+  ggplot(aes(x = factor(order_dow), y = n)) + geom_bar(stat = "identity")
+```
+
+![](p8105_hw3_yh3094_files/figure-markdown_github/order_placed_day-1.png)
 
 Calculate the number of aisles and find out the most frequent
 -------------------------------------------------------------
@@ -161,14 +215,15 @@ n_distinct(instacart$aisle) ## number of aisles
 ``` r
 instacart %>% 
   count(aisle) %>% 
-  mutate(aisle_ranking = min_rank(desc(n))) %>% 
-  filter(aisle_ranking == 1)
+  top_n(1)
 ```
 
-    ## # A tibble: 1 x 3
-    ##   aisle                 n aisle_ranking
-    ##   <chr>             <int>         <int>
-    ## 1 fresh vegetables 150609             1
+    ## Selecting by n
+
+    ## # A tibble: 1 x 2
+    ##   aisle                 n
+    ##   <chr>             <int>
+    ## 1 fresh vegetables 150609
 
 There are 134 aisles. Fresh vegetables is the aisle which the most items ordered from.
 
@@ -177,21 +232,124 @@ Make a plot
 
 The code chunk below makes a plot that shows the number of items ordered in each aisle. Order aisles sensibly, and organize your plot so others can read it.
 
+Solution a
+
 ``` r
-instacart %>% 
-  group_by(department, aisle) %>% 
-  summarise(n_item = sum(order_number)) %>% 
-  ggplot(aes(x = aisle, y = n_item, color = aisle)) +
-  geom_point() +
-  facet_grid(~department)
+instacart %>%
+  count(aisle) %>%
+  pull(n) %>% 
+  quantile
 ```
 
-<img src="p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-1.png" width="90%" />
+    ##       0%      25%      50%      75%     100% 
+    ##    287.0   1464.5   4723.0  12020.0 150609.0
+
+``` r
+aisle_p1 = 
+  instacart %>%
+  count(aisle) %>%
+  filter(n %in% quantile(n, 0):quantile(n, 0.25)) %>% 
+  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
+  geom_bar(stat = "identity") +
+  labs(x = "aisle", y = "number of items") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+
+aisle_p2 = 
+  instacart %>%
+  count(aisle) %>% 
+  filter(n %in% 1464:4723) %>% 
+  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
+  geom_bar(stat = "identity") +
+  labs(x = "aisle", y = "number of items") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+aisle_p3 =
+  instacart %>%
+  count(aisle) %>%
+  filter(n %in% quantile(n, 0.5):quantile(n, 0.75)) %>% 
+  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
+  geom_bar(stat = "identity") +
+  labs(x = "aisle", y = "number of items") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+aisle_p4 =
+  instacart %>%
+  count(aisle) %>%
+  filter(n %in% quantile(n, 0.75):quantile(n, 1)) %>% 
+  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
+  geom_bar(stat = "identity") +
+  labs(x = "aisle", y = "number of items") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+library(patchwork) 
+aisle_p1/aisle_p2
+```
+
+![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-1.png)
+
+``` r
+aisle_p3/aisle_p4
+```
+
+![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-2.png)
+
+Solution b
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  ggplot(aes(x = n)) +
+  geom_histogram() +
+  labs(x = "Number of items", y = "Number of aisles")
+```
+
+    ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
+
+![](p8105_hw3_yh3094_files/figure-markdown_github/unnamed-chunk-1-1.png)
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  top_n(3)
+```
+
+    ## Selecting by n
+
+    ## # A tibble: 3 x 2
+    ##   aisle                           n
+    ##   <chr>                       <int>
+    ## 1 fresh fruits               150473
+    ## 2 fresh vegetables           150609
+    ## 3 packaged vegetables fruits  78493
+
+The number of items ordered in most aisles are below 25,000, although in some aisles, like "fresh fruits" and "fresh vegetables", the number of items ordered are quite large, more than 150,000.
 
 Make a table
 ------------
 
 The code chunk below makes a table showing the most popular item aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
+
+``` r
+instacart %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
+  group_by(aisle) %>% 
+  count(product_name) %>% 
+  top_n(1) %>% 
+  rename("the most popular item" = "product_name") %>% 
+  select(-n) %>% 
+  knitr::kable() 
+```
+
+    ## Selecting by n
+
+| aisle                      | the most popular item                         |
+|:---------------------------|:----------------------------------------------|
+| baking ingredients         | Light Brown Sugar                             |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |
+| packaged vegetables fruits | Organic Baby Spinach                          |
+
+The most popular items aisle “baking ingredients”, “dog food care”, and “packaged vegetables fruits” are Light Brown Sugar, Snack Sticks Chicken & Rice Recipe Dog Treats and Organic Baby Spinach, respectively.
 
 Make a table
 ------------
@@ -211,6 +369,8 @@ instacart %>%
 |:-----------------|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
 | Coffee Ice Cream |  13.8|  14.3|  15.4|  15.3|  15.2|  12.3|  13.8|
 | Pink Lady Apples |  13.4|  11.4|  11.7|  14.2|  11.6|  12.8|  11.9|
+
+On most days of a week, the mean hour at which Pink Lady Apples is ordered is earlier than that and at which Coffee Ice Cream is ordered.
 
 Problem 3
 =========
