--- a/p8105_hw3_yh3094.md
+++ b/p8105_hw3_yh3094.md
@@ -282,17 +282,10 @@ aisle_p4 =
   labs(x = "aisle", y = "number of items") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
-library(patchwork) 
-aisle_p1/aisle_p2
+aisle_p1/aisle_p2/aisle_p3/aisle_p4
 ```
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-1.png)
-
-``` r
-aisle_p3/aisle_p4
-```
-
-![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-2.png)
 
 Solution b
 
@@ -306,7 +299,7 @@ instacart %>%
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
-![](p8105_hw3_yh3094_files/figure-markdown_github/unnamed-chunk-1-1.png)
+![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot_2-1.png)
 
 ``` r
 instacart %>% 
@@ -381,4 +374,105 @@ Import the NY NOAA data
 ``` r
 data("ny_noaa")
 ny_noaa = janitor::clean_names(ny_noaa) ## clean variable names
+skimr::skim(ny_noaa)
 ```
+
+    ## Skim summary statistics
+    ##  n obs: 2595176 
+    ##  n variables: 7 
+    ## 
+    ## -- Variable type:character --------------------------------------------------------------------
+    ##  variable missing complete       n min max empty n_unique
+    ##        id       0  2595176 2595176  11  11     0      747
+    ##      tmax 1134358  1460818 2595176   1   4     0      532
+    ##      tmin 1134420  1460756 2595176   1   4     0      548
+    ## 
+    ## -- Variable type:Date -------------------------------------------------------------------------
+    ##  variable missing complete       n        min        max     median
+    ##      date       0  2595176 2595176 1981-01-01 2010-12-31 1997-01-21
+    ##  n_unique
+    ##     10957
+    ## 
+    ## -- Variable type:integer ----------------------------------------------------------------------
+    ##  variable missing complete       n  mean     sd  p0 p25 p50 p75  p100
+    ##      prcp  145838  2449338 2595176 29.82  78.18   0   0   0  23 22860
+    ##      snow  381221  2213955 2595176  4.99  27.22 -13   0   0   0 10160
+    ##      snwd  591786  2003390 2595176 37.31 113.54   0   0   0   0  9195
+    ##      hist
+    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
+
+Write a short description of the dataset, noting the size and structure of the data, describing some key variables, and indicating the extent to which missing data is an issue.
+
+The NY NOAA data has 2595176 observations and 7 variables. Variables for `id`, `tmax` and `tmin` are class `character`. Variables for `prcp`, `snow` and `snwd` are class `integer`. Variable for `date` is class `Date`.
+
+Clean the NY NOAA data
+----------------------
+
+``` r
+ny_noaa = ny_noaa %>% 
+  separate(col = date, into = c("year", "month", "day"), sep = "-")
+ny_noaa$tmax = as.numeric(ny_noaa$tmax)
+ny_noaa$tmin = as.numeric(ny_noaa$tmin)
+```
+
+The most commonly observed value for snowfall
+---------------------------------------------
+
+``` r
+ny_noaa %>% 
+  count(snow) %>% 
+  top_n(1)
+```
+
+    ## Selecting by n
+
+    ## # A tibble: 1 x 2
+    ##    snow       n
+    ##   <int>   <int>
+    ## 1     0 2008508
+
+0 is the most commonly observed value for snowfall. Because for most of the time between 1981-01-01 and 2010-12-31, it didn't snow in NY state.
+
+Make a two-panel plot
+---------------------
+
+The code chunk below makes a two-panel plot showing the average max temperature in January and in July in each station across years.
+
+``` r
+ny_noaa %>% 
+  filter(month %in% c("01", "07")) %>% 
+  group_by(month, id, year) %>%
+  summarize(tmax_mean = mean(tmax, na.rm = T)) %>%
+  ggplot(aes(x = year, y = tmax_mean, fill = year)) +
+  geom_violin() +
+  facet_grid(~month)
+```
+
+    ## Warning: Removed 5970 rows containing non-finite values (stat_ydensity).
+
+![](p8105_hw3_yh3094_files/figure-markdown_github/tmax_jan_july-1.png)
+
+Make a two-panel plot
+---------------------
+
+The code chunk below makes a two-panel plot showing (i) tmax vs tmin for the full dataset (note that a scatterplot may not be the best option); and (ii) make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year
+
+``` r
+tmax_tmin = ny_noaa %>% 
+  ggplot(aes(x = tmax, y = tmin)) +
+  geom_hex()
+
+snowfall = ny_noaa %>% 
+  filter(snow > 0 & snow < 100) %>% 
+  group_by(year) %>% 
+  ggplot(aes(x = year, y = snow)) +
+  geom_boxplot()
+
+tmax_tmin + snowfall
+```
+
+    ## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
+
+![](p8105_hw3_yh3094_files/figure-markdown_github/tmax_tmin_snowfall-1.png)
